# Ark-Pets-Integration

./: .gitignore  README.md
GNOME/: .prettierignore  .prettierrc  Makefile  README.md  eslint.config.js  extension.ts  metadata.json  package.json  pnpm-lock.yaml  tsconfig.json
GNOME/window-calls-arkpets@harryh.cn/: extension.js  metadata.json
KWin/: CMakeLists.txt  README.md  arkpetsintegration.cpp  arkpetsintegration.h  arkpetsintegration.hpp  dbus.h  dbus.hpp  main.cpp  metadata.json  org.kde.KWin.ArkPets.xml
